--- a/configure.in
+++ b/configure.in
@@ -1,12 +1,13 @@
 dnl Process this file with 'autoconf' to produce a 'configure' script
-dnl $Id: configure.in,v 1.20 2006/11/26 17:33:28 tom Exp $
-AC_REVISION($Revision: 1.20 $)
+dnl $Id: configure.in,v 1.21 2010/08/26 10:53:17 tom Exp $
+AC_REVISION($Revision: 1.21 $)
 
 AC_INIT(esc.c)
 AC_CONFIG_HEADER(config.h:config.hin)
 
 CF_CHECK_CACHE
 
+AC_ARG_PROGRAM
 AC_PROG_CC
 CF_INTEL_COMPILER
 CF_PROG_EXT
