--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl Process this file with 'autoconf' to produce a 'configure' script
-dnl $Id: configure.in,v 1.21 2010/08/26 10:53:17 tom Exp $
-AC_REVISION($Revision: 1.21 $)
+dnl $Id: configure.in,v 1.22 2013/08/09 22:34:03 tom Exp $
+AC_REVISION($Revision: 1.22 $)
 
 AC_INIT(esc.c)
 AC_CONFIG_HEADER(config.h:config.hin)
@@ -8,9 +8,8 @@ AC_CONFIG_HEADER(config.h:config.hin)
 CF_CHECK_CACHE
 
 AC_ARG_PROGRAM
-AC_PROG_CC
+CF_PROG_CC
 CF_INTEL_COMPILER
-CF_PROG_EXT
 
 AC_PROG_INSTALL
 CF_MAKE_TAGS
