--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl Process this file with 'autoconf' to produce a 'configure' script
-dnl $Id: configure.in,v 1.22 2013/08/09 22:34:03 tom Exp $
-AC_REVISION($Revision: 1.22 $)
+dnl $Id: configure.in,v 1.23 2014/01/16 20:30:05 tom Exp $
+AC_REVISION($Revision: 1.23 $)
 
 AC_INIT(esc.c)
 AC_CONFIG_HEADER(config.h:config.hin)
@@ -52,3 +52,4 @@ CF_FCNTL_VS_IOCTL
 
 ###	output makefile and config.h
 AC_OUTPUT(makefile)
+CF_MAKE_DOCS(['$(THIS)'],[$(manext)])
