--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl Process this file with 'autoconf' to produce a 'configure' script
-dnl $Id: configure.in,v 1.23 2014/01/16 20:30:05 tom Exp $
-AC_REVISION($Revision: 1.23 $)
+dnl $Id: configure.in,v 1.26 2018/07/26 00:14:58 tom Exp $
+AC_REVISION($Revision: 1.26 $)
 
 AC_INIT(esc.c)
 AC_CONFIG_HEADER(config.h:config.hin)
@@ -9,14 +9,12 @@ CF_CHECK_CACHE
 
 AC_ARG_PROGRAM
 CF_PROG_CC
-CF_INTEL_COMPILER
 
 AC_PROG_INSTALL
 CF_MAKE_TAGS
+CF_PROG_LINT
 
-AC_CHECK_PROGS(LINT, lint alint splint lclint, [])
-AC_SUBST(LINT)
-
+CF_WITH_MAN2HTML
 CF_DISABLE_ECHO
 CF_WITH_WARNINGS
 CF_XOPEN_SOURCE
@@ -52,4 +50,4 @@ CF_FCNTL_VS_IOCTL
 
 ###	output makefile and config.h
 AC_OUTPUT(makefile)
-CF_MAKE_DOCS(['$(THIS)'],[$(manext)])
+CF_MAKE_DOCS(['$(THIS)'],1)
