--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl Process this file with 'autoconf' to produce a 'configure' script
-dnl $Id: configure.in,v 1.27 2020/03/03 22:42:35 tom Exp $
-AC_REVISION($Revision: 1.27 $)
+dnl $Id: configure.in,v 1.29 2020/09/20 17:09:30 tom Exp $
+AC_REVISION($Revision: 1.29 $)
 
 AC_INIT(esc.c)
 AC_CONFIG_HEADER(config.h:config.hin)
@@ -13,12 +13,13 @@ CF_PROG_CC
 CF_WITHOUT_X
 
 AC_PROG_INSTALL
+CF_MAKE_PHONY
 CF_MAKE_TAGS
 CF_PROG_LINT
 
 CF_WITH_MAN2HTML
 CF_DISABLE_ECHO
-CF_WITH_WARNINGS
+CF_ENABLE_WARNINGS
 CF_XOPEN_SOURCE
 
 ###	extra things that we'll substitute in the makefile
