--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl Process this file with 'autoconf' to produce a 'configure' script
-dnl $Id: configure.in,v 1.29 2020/09/20 17:09:30 tom Exp $
-AC_REVISION($Revision: 1.29 $)
+dnl $Id: configure.in,v 1.30 2022/02/26 16:04:04 tom Exp $
+AC_REVISION($Revision: 1.30 $)
 
 AC_INIT(esc.c)
 AC_CONFIG_HEADER(config.h:config.hin)
@@ -44,6 +44,7 @@ rdchk \
 tcgetattr \
 usleep \
 )
+CF_STRERROR
 
 ###	special configuration tests
 CF_POSIX_VDISABLE
