--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl Process this file with 'autoconf' to produce a 'configure' script
-dnl $Id: configure.in,v 1.30 2022/02/26 16:04:04 tom Exp $
-AC_REVISION($Revision: 1.30 $)
+dnl $Id: configure.in,v 1.31 2022/11/10 23:14:06 tom Exp $
+AC_REVISION($Revision: 1.31 $)
 
 AC_INIT(esc.c)
 AC_CONFIG_HEADER(config.h:config.hin)
@@ -43,6 +43,7 @@ alarm \
 rdchk \
 tcgetattr \
 usleep \
+vfprintf \
 )
 CF_STRERROR
 
