--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl Process this file with 'autoconf' to produce a 'configure' script
-dnl $Id: configure.in,v 1.31 2022/11/10 23:14:06 tom Exp $
-AC_REVISION($Revision: 1.31 $)
+dnl $Id: configure.in,v 1.32 2023/02/01 21:58:49 tom Exp $
+AC_REVISION($Revision: 1.32 $)
 
 AC_INIT(esc.c)
 AC_CONFIG_HEADER(config.h:config.hin)
@@ -23,19 +23,16 @@ CF_ENABLE_WARNINGS
 CF_XOPEN_SOURCE
 
 ###	extra things that we'll substitute in the makefile
+AC_CHECK_DECL(exit)
 AC_TYPE_SIGNAL
-AC_STDC_HEADERS
 AC_HAVE_HEADERS( \
 fcntl.h \
 ioctl.h \
 sgtty.h \
-stdlib.h \
-string.h \
 sys/filio.h \
 sys/ioctl.h \
 termio.h \
 termios.h \
-unistd.h \
 )
 
 AC_HAVE_FUNCS( \
